--- a/_modules/TermTk/TTkCore/canvas.html
+++ b/_modules/TermTk/TTkCore/canvas.html
@@ -254,6 +254,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_height</span> <span class="o">=</span> <span class="n">h</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_width</span>  <span class="o">=</span> <span class="n">w</span>
 
+    <span class="k">def</span> <span class="nf">size</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">return</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_width</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_height</span><span class="p">)</span>
+
 <div class="viewcode-block" id="TTkCanvas.resize"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkCore.canvas.html#TermTk.TTkCore.canvas.TTkCanvas.resize">[docs]</a>    <span class="k">def</span> <span class="nf">resize</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">w</span><span class="p">,</span> <span class="n">h</span><span class="p">):</span>
         <span class="sd">&#39;&#39;&#39; resize the canvas keeping or cutting the current one</span>
 
