--- a/_modules/TermTk/TTkWidgets/radiobutton.html
+++ b/_modules/TermTk/TTkWidgets/radiobutton.html
@@ -214,8 +214,10 @@
 
 <span class="sd">    Demo: `formwidgets.py &lt;https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/demo/showcase/formwidgets.py&gt;`_</span>
 
-<span class="sd">    :param str text: the text shown on the checkbox, defaults to &quot;&quot;</span>
+<span class="sd">    :param str text: the text shown on the radio button, defaults to &quot;&quot;</span>
 <span class="sd">    :type text: str, optional</span>
+<span class="sd">    :param str name: the text used to group the RadioButtons, only one checked status is allowed in between all the radio buttons with the same name, defaults to &quot;TTkRadioButton&quot;</span>
+<span class="sd">    :type name: str, optional</span>
 <span class="sd">    :param bool checked: Checked status, defaults to &quot;False&quot;</span>
 <span class="sd">    :type checked: bool, optional</span>
 
