--- a/genindex.html
+++ b/genindex.html
@@ -280,20 +280,12 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxTextColor">checkboxTextColor (TTkTheme attribute)</a>
 </li>
-      <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxTextColorFocus">checkboxTextColorFocus (TTkTheme attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxTextColorFocus">checkboxTextColorFocus (TTkTheme attribute)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.checkState">checkState() (TTkCheckbox method)</a>
 </li>
-      <li><a href="autogen.TermTk/TermTk.TTkWidgets.button.html#TermTk.TTkWidgets.button.TTkButton.clicked">clicked() (TTkButton method)</a>
-
-      <ul>
-        <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.clicked">(TTkCheckbox method)</a>
-</li>
-        <li><a href="autogen.TermTk/TermTk.TTkWidgets.radiobutton.html#TermTk.TTkWidgets.radiobutton.TTkRadioButton.clicked">(TTkRadioButton method)</a>
-</li>
-      </ul></li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.TTkKeyEvent.code">code (TTkKeyEvent attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxBorderColor">comboboxBorderColor (TTkTheme attribute)</a>
@@ -563,6 +555,8 @@
         <li><a href="autogen.TermTk/TermTk.TTkTemplates.color.html#module-TermTk.TTkTemplates.color">TermTk.TTkTemplates.color</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkTemplates.data.html#module-TermTk.TTkTemplates.data">TermTk.TTkTemplates.data</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkTemplates.dragevents.html#module-TermTk.TTkTemplates.dragevents">TermTk.TTkTemplates.dragevents</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkTemplates.keyevents.html#module-TermTk.TTkTemplates.keyevents">TermTk.TTkTemplates.keyevents</a>
 </li>
@@ -893,10 +887,10 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.ShiftModifier">ShiftModifier (TTkConstant.KeyModifier attribute)</a>
 </li>
-      <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.sortColumn">sortColumn() (TTkTreeWidget method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.sortColumn">sortColumn() (TTkTreeWidget method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.sortItems">sortItems() (TTkTreeWidget method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyType.SpecialKey">SpecialKey (TTkConstant.KeyType attribute)</a>
@@ -904,8 +898,6 @@
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.split">split() (TTkString method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.timer.html#TermTk.TTkCore.timer.TTkTimer.start">start() (TTkTimer method)</a>
-</li>
-      <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.stateChanged">stateChanged() (TTkCheckbox method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#TermTk.TTkCore.color.TTkColor.STRIKETROUGH">STRIKETROUGH (TTkColor attribute)</a>
 </li>
@@ -1215,6 +1207,13 @@
 
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkTemplates.data.html#module-TermTk.TTkTemplates.data">module</a>
+</li>
+      </ul></li>
+      <li>
+    TermTk.TTkTemplates.dragevents
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkTemplates.dragevents.html#module-TermTk.TTkTemplates.dragevents">module</a>
 </li>
       </ul></li>
       <li>
