--- a/_modules/TermTk/TTkLayouts/boxlayout.html
+++ b/_modules/TermTk/TTkLayouts/boxlayout.html
@@ -195,7 +195,7 @@
 <span class="c1"># SOFTWARE.</span>
 
 <span class="sd">&#39;&#39;&#39;</span>
-<span class="sd">### Box Layout - [Tutorial](https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/tutorial/002-layout.md)</span>
+<span class="sd">**Box Layout** [`Tutorial &lt;https://ceccopierangiolieugenio.github.io/pyTermTk/tutorial/002-layout.html#simple-ttkvboxlayout&gt;`_]</span>
 <span class="sd">&#39;&#39;&#39;</span>
 
 <span class="kn">from</span> <span class="nn">TermTk.TTkCore.log</span> <span class="kn">import</span> <span class="n">TTkLog</span>
