--- a/_modules/TermTk/TTkWidgets/image.html
+++ b/_modules/TermTk/TTkWidgets/image.html
@@ -273,6 +273,73 @@
             <span class="c1"># Use Blue as splitter</span>
             <span class="k">return</span> <span class="n">splitReduce</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
 
+    <span class="nd">@staticmethod</span>
+    <span class="k">def</span> <span class="nf">_rgb2hsl</span><span class="p">(</span><span class="n">rgb</span><span class="p">):</span>
+        <span class="n">r</span> <span class="o">=</span> <span class="n">rgb</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">/</span><span class="mi">255</span>
+        <span class="n">g</span> <span class="o">=</span> <span class="n">rgb</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span><span class="o">/</span><span class="mi">255</span>
+        <span class="n">b</span> <span class="o">=</span> <span class="n">rgb</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span><span class="o">/</span><span class="mi">255</span>
+        <span class="n">cmax</span> <span class="o">=</span> <span class="nb">max</span><span class="p">(</span><span class="n">r</span><span class="p">,</span><span class="n">g</span><span class="p">,</span><span class="n">b</span><span class="p">)</span>
+        <span class="n">cmin</span> <span class="o">=</span> <span class="nb">min</span><span class="p">(</span><span class="n">r</span><span class="p">,</span><span class="n">g</span><span class="p">,</span><span class="n">b</span><span class="p">)</span>
+
+        <span class="n">lum</span> <span class="o">=</span> <span class="p">(</span><span class="n">cmax</span><span class="o">-</span><span class="n">cmin</span><span class="p">)</span><span class="o">/</span><span class="mi">2</span>
+        <span class="k">if</span> <span class="n">cmax</span> <span class="o">==</span> <span class="n">cmin</span><span class="p">:</span>
+            <span class="k">return</span> <span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="n">lum</span>
+
+        <span class="n">delta</span> <span class="o">=</span> <span class="n">cmax</span><span class="o">-</span><span class="n">cmin</span>
+        <span class="k">if</span>   <span class="n">cmax</span> <span class="o">==</span> <span class="n">r</span><span class="p">:</span>
+            <span class="n">hue</span> <span class="o">=</span> <span class="p">((</span><span class="n">g</span><span class="o">-</span><span class="n">b</span><span class="p">)</span><span class="o">/</span><span class="n">delta</span><span class="p">)</span><span class="o">%</span><span class="mi">6</span>
+        <span class="k">elif</span> <span class="n">cmax</span> <span class="o">==</span> <span class="n">g</span><span class="p">:</span>
+            <span class="n">hue</span> <span class="o">=</span> <span class="p">(</span><span class="n">b</span><span class="o">-</span><span class="n">r</span><span class="p">)</span><span class="o">/</span><span class="n">delta</span><span class="o">+</span><span class="mi">2</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">hue</span> <span class="o">=</span> <span class="p">(</span><span class="n">r</span><span class="o">-</span><span class="n">g</span><span class="p">)</span><span class="o">/</span><span class="n">delta</span><span class="o">+</span><span class="mi">4</span>
+
+        <span class="n">sat</span> <span class="o">=</span> <span class="n">delta</span> <span class="o">/</span> <span class="p">(</span><span class="mi">1</span> <span class="o">-</span> <span class="nb">abs</span><span class="p">(</span><span class="n">delta</span><span class="o">-</span><span class="mi">1</span><span class="p">))</span>
+        <span class="n">hue</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">hue</span><span class="o">*</span><span class="mi">60</span><span class="p">)</span> <span class="o">+</span> <span class="p">(</span> <span class="mi">360</span> <span class="k">if</span> <span class="n">hue</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="mi">0</span> <span class="p">)</span>
+        <span class="n">sat</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">sat</span><span class="o">*</span><span class="mi">100</span><span class="p">)</span>
+        <span class="n">lum</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">lum</span><span class="o">*</span><span class="mi">100</span><span class="p">)</span>
+
+        <span class="k">return</span> <span class="n">hue</span><span class="p">,</span><span class="n">sat</span><span class="p">,</span><span class="n">lum</span>
+
+    <span class="nd">@staticmethod</span>
+    <span class="k">def</span> <span class="nf">_hsl2rgb</span><span class="p">(</span><span class="n">hsl</span><span class="p">):</span>
+        <span class="n">hue</span> <span class="o">=</span> <span class="n">hsl</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+        <span class="n">sat</span> <span class="o">=</span> <span class="n">hsl</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">/</span> <span class="mi">100</span>
+        <span class="n">lum</span> <span class="o">=</span> <span class="n">hsl</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span> <span class="o">/</span> <span class="mi">100</span>
+
+        <span class="n">c</span> <span class="o">=</span> <span class="p">(</span><span class="mi">1</span><span class="o">-</span><span class="nb">abs</span><span class="p">(</span><span class="mi">2</span><span class="o">*</span><span class="n">lum</span><span class="o">-</span><span class="mi">1</span><span class="p">))</span><span class="o">*</span><span class="n">sat</span>
+        <span class="n">x</span> <span class="o">=</span> <span class="n">c</span><span class="o">*</span><span class="p">(</span><span class="mi">1</span><span class="o">-</span><span class="nb">abs</span><span class="p">((</span><span class="n">hue</span><span class="o">/</span><span class="mi">60</span><span class="p">)</span><span class="o">%</span><span class="mi">2</span><span class="o">-</span><span class="mi">1</span><span class="p">))</span>
+        <span class="n">m</span> <span class="o">=</span> <span class="n">lum</span><span class="o">-</span><span class="n">c</span><span class="o">/</span><span class="mi">2</span>
+
+        <span class="k">if</span>     <span class="mi">0</span> <span class="o">&lt;=</span> <span class="n">hue</span> <span class="o">&lt;</span> <span class="mi">60</span><span class="p">:</span>
+          <span class="n">r</span><span class="p">,</span><span class="n">g</span><span class="p">,</span><span class="n">b</span> <span class="o">=</span> <span class="n">c</span><span class="p">,</span><span class="n">x</span><span class="p">,</span><span class="mi">0</span>
+        <span class="k">elif</span>  <span class="mi">60</span> <span class="o">&lt;=</span> <span class="n">hue</span> <span class="o">&lt;</span> <span class="mi">120</span><span class="p">:</span>
+          <span class="n">r</span><span class="p">,</span><span class="n">g</span><span class="p">,</span><span class="n">b</span> <span class="o">=</span> <span class="n">x</span><span class="p">,</span><span class="n">c</span><span class="p">,</span><span class="mi">0</span>
+        <span class="k">elif</span> <span class="mi">120</span> <span class="o">&lt;=</span> <span class="n">hue</span> <span class="o">&lt;</span> <span class="mi">180</span><span class="p">:</span>
+          <span class="n">r</span><span class="p">,</span><span class="n">g</span><span class="p">,</span><span class="n">b</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span><span class="n">c</span><span class="p">,</span><span class="n">x</span>
+        <span class="k">elif</span> <span class="mi">180</span> <span class="o">&lt;=</span> <span class="n">hue</span> <span class="o">&lt;</span> <span class="mi">240</span><span class="p">:</span>
+          <span class="n">r</span><span class="p">,</span><span class="n">g</span><span class="p">,</span><span class="n">b</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span><span class="n">x</span><span class="p">,</span><span class="n">c</span>
+        <span class="k">elif</span> <span class="mi">240</span> <span class="o">&lt;=</span> <span class="n">hue</span> <span class="o">&lt;</span> <span class="mi">300</span><span class="p">:</span>
+          <span class="n">r</span><span class="p">,</span><span class="n">g</span><span class="p">,</span><span class="n">b</span> <span class="o">=</span> <span class="n">x</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="n">c</span>
+        <span class="k">elif</span> <span class="mi">300</span> <span class="o">&lt;=</span> <span class="n">hue</span> <span class="o">&lt;</span> <span class="mi">360</span><span class="p">:</span>
+          <span class="n">r</span><span class="p">,</span><span class="n">g</span><span class="p">,</span><span class="n">b</span> <span class="o">=</span> <span class="n">c</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="n">x</span>
+
+        <span class="n">r</span> <span class="o">=</span> <span class="nb">int</span><span class="p">((</span><span class="n">r</span> <span class="o">+</span> <span class="n">m</span><span class="p">)</span> <span class="o">*</span> <span class="mi">255</span><span class="p">)</span>
+        <span class="n">g</span> <span class="o">=</span> <span class="nb">int</span><span class="p">((</span><span class="n">g</span> <span class="o">+</span> <span class="n">m</span><span class="p">)</span> <span class="o">*</span> <span class="mi">255</span><span class="p">)</span>
+        <span class="n">b</span> <span class="o">=</span> <span class="nb">int</span><span class="p">((</span><span class="n">b</span> <span class="o">+</span> <span class="n">m</span><span class="p">)</span> <span class="o">*</span> <span class="mi">255</span><span class="p">)</span>
+
+        <span class="k">return</span> <span class="n">r</span><span class="p">,</span><span class="n">g</span><span class="p">,</span><span class="n">b</span>
+
+    <span class="k">def</span> <span class="nf">rotHue</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">deg</span><span class="p">):</span>
+        <span class="n">old</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_data</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_data</span> <span class="o">=</span> <span class="p">[[</span><span class="n">p</span> <span class="k">for</span> <span class="n">p</span> <span class="ow">in</span> <span class="n">l</span> <span class="p">]</span> <span class="k">for</span> <span class="n">l</span> <span class="ow">in</span> <span class="n">old</span><span class="p">]</span>
+        <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_data</span><span class="p">:</span>
+            <span class="k">for</span> <span class="n">i</span><span class="p">,</span><span class="n">pixel</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">row</span><span class="p">):</span>
+                <span class="n">h</span><span class="p">,</span><span class="n">s</span><span class="p">,</span><span class="n">l</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_rgb2hsl</span><span class="p">(</span><span class="n">pixel</span><span class="p">)</span>
+                <span class="n">h</span> <span class="o">+=</span> <span class="n">deg</span>
+                <span class="c1">#TTkLog.debug(f&quot;{h=}&quot;)</span>
+                <span class="k">if</span> <span class="n">h</span> <span class="o">&gt;=</span> <span class="mi">360</span><span class="p">:</span> <span class="n">h</span><span class="o">-=</span><span class="mi">360</span>
+                <span class="n">row</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_hsl2rgb</span><span class="p">((</span><span class="n">h</span><span class="p">,</span><span class="n">s</span><span class="p">,</span><span class="n">l</span><span class="p">))</span>
+
 <div class="viewcode-block" id="TTkImage.paintEvent"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkWidgets.image.html#TermTk.TTkWidgets.image.TTkImage.paintEvent">[docs]</a>    <span class="k">def</span> <span class="nf">paintEvent</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">img</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_data</span>
         <span class="k">for</span> <span class="n">y</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">img</span><span class="p">)</span><span class="o">&amp;</span><span class="p">(</span><span class="o">~</span><span class="mi">1</span><span class="p">),</span> <span class="mi">2</span><span class="p">):</span>
